# wesley-bot-whatsapp-assistant

./: .dockerignore  .env.example  .gitignore  COMO_TESTAR_LOCAL.md  DEPLOY_ORACLE.md  Dockerfile  PLANO-RAG-MELHORIAS.md  PYTHON-CONCURRENCY-PATTERNS.md  ctx_inspect.js  docker-compose.yml  docker-entrypoint.sh  plano-whatsapp-bot.md  pyproject.toml  regras-backend.md  regras-frontend.md  regras-testes.md  rules.md  set_webhook.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 888e7d557311_criando_tabelas_iniciais_cliente_.py  9d2b3c1a4f10_create_bot_allow_block_table.py  a1c3e5f7b9d2_add_oculta_to_bot_clientes.py
certificados-wesley/: README.md
certificados-wesley/portfolio-content/: CURRICULO-english.md  CURRICULO.md  README-english.md  README_GITHUB_PROFILE-english.md  README_GITHUB_PROFILE.md  STACKS-english.md  STACKS.md
certificados-wesley/portfolio-content/projects/: Star-Wars-App-english.md  Star-Wars-App.md  aa_space-english.md  aa_space.md  certificados-wesley-english.md  certificados-wesley.md  chrome_extensao_skip_video-english.md  chrome_extensao_skip_video.md  desafio_fullstack-english.md  desafio_fullstack.md  dev_task_manager-english.md  dev_task_manager.md  experimenta-ai---soneca-english.md  experimenta-ai---soneca.md  experimenta_ai_soneca_delivery-english.md  experimenta_ai_soneca_delivery.md  first-angular-app-english.md  github_stats_wmakeouthill-english.md  github_stats_wmakeouthill.md  pintarapp-english.md  (+20 more)
certificados-wesley/portfolio-translate/: overrides.json
scripts/: set_admin_password.py
src/app/: main.py
(+25 files in other folders)
